--- a/styles/form.css
+++ b/styles/form.css
@@ -2,7 +2,7 @@
     box-sizing: border-box;
 }
 body {
-  font-family: Arial, sans-serif;
+  font-family: "Exo 2", sans-serif;
   background-color: #f4f4f9;
   margin: 0;
   padding: 0;
